[tool.poetry]
name = "binance-export"
version = "0.1.0"
description = ""
authors = ["MichaelProjects <michael.lichtenecker@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-binance = "^1.0.19"
httpx = "^0.27.0"
fastapi = "^0.111.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
